--- a/jjjjj.css
+++ b/jjjjj.css
@@ -1,5 +1,3 @@
-font-family: 'Arial', 'Helvetica Neue', sans-serif;
-
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
@@ -185,6 +183,34 @@ footer {
     justify-content: center;
     text-align: center;
 }
+
+/* Style all font awesome icons */
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+  }
+  
+  /* Add a hover effect if you want */
+  .fa:hover {
+    opacity: 0.7;
+  }
+  
+  /* Set a specific color for each brand */
+  
+  /* Facebook */
+  .fa-github {
+    background: #3B5998;
+    color: white;
+  }
+  
+  /* Twitter */
+  .fa-linkedin {
+    background: #55ACEE;
+    color: white;
+  }
 
 .about-me img {
     width: 300px; /* Set the desired width for the image */
@@ -415,8 +441,41 @@ footer {
     left: 0;
 }
 
-@media (max-width: 600px) {
-   .navbar {
-       background-color: #040D12; /* Solid background for smaller screens */
-   }
+iframe:fullscreen {
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+
+
+/* Existing styles remain unchanged */
+
+.slideshow {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.work {
+    display: none;
+}
+
+.slideshow-controls {
+    text-align: center;
+    margin-top: 10px;
+}
+
+.slideshow-controls button {
+    background-color: #333;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 5px;
+    margin: 0 10px;
+}
+
+.slideshow-controls button:hover {
+    background-color: #555;
 }
