--- a/jjjjj.css
+++ b/jjjjj.css
@@ -110,10 +110,10 @@ footer {
 
 /* Navbar Styles */
 .navbar {
-    background-color: rgba(4, 13, 18, 0.7);
     position: fixed;
-    width: 100%;
     top: 0;
+    width: 100%;
+    background-color: rgba(4, 13, 18, 0.9); /* Slightly more opaque */
     z-index: 1000;
 }
 
